--- a/templates/profile/create.html
+++ b/templates/profile/create.html
@@ -59,7 +59,7 @@
                 <div class="form-area">
                     <div class="create-field-area">
                         <div class="input-field">
-                            {% if message == 'empty-display-name' or message == 'display-name-taken' %}
+                            {% if message == 'empty-display-name' or message == 'display-name-taken' or message == 'display-name-overflow' %}
                             <input class="erroneous-input" type="text" id="create-name" name="create-name" autocomplete="off" placeholder="Display Name">
                             {% else %}
                             <input type="text" id="create-name" name="create-name" autocomplete="off" placeholder="Display Name">
@@ -86,6 +86,8 @@
                     <div class="create-support-message"><p>Snap, That display name has already been taken! Try another one.</p></div>
                     {% elif message == 'mismatched-passwords' %}
                     <div class="create-support-message"><p>Those passwords don't match. Repeat. Those passwords don't match.</p></div>
+                    {% elif message == 'display-name-overflow' %}
+                    <div class="create-support-message"><p>That display name is over 20 characters! Shorten it down.</p></div>
                     {% else %}
                     <div class="create-support-message"><p></p></div>
                     {% endif %}
