--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -185,7 +185,6 @@ input:focus:-ms-input-placeholder {
 }
 
 .post-scroll {
-    display: flex;
     flex-direction: column;
     overflow-y: scroll;
     height: 100%;
@@ -239,11 +238,11 @@ input:focus:-ms-input-placeholder {
     font-size: 20px;
     text-align: center;
     color: white;
+    margin: 3px 0;
 }
 
 .post {
     display: flex;
-    position: relative;
     flex-direction: column;
     background-color: white;
 }
@@ -257,9 +256,9 @@ input:focus:-ms-input-placeholder {
     text-decoration: none;
     cursor: pointer;
     border: 5px solid #f28500;
-    border-left: 10px solid #f28500;
-    border-right: 10px solid #f28500;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .trending-post-border {
@@ -272,13 +271,13 @@ input:focus:-ms-input-placeholder {
 
 .post-title {
     font-family: 'Poppins', sans-serif;
-    font-size: 25px;
+    font-size: 26px;
     color: black;
-    padding: 15px 20px 0px 20px;
+    padding: 10px 15px 10px 15px;
 }
 
 .post-title-de {
-    box-shadow: inset 0 -12px 0 #F28500;
+    box-shadow: inset 0 -14px 0 #F28500;
 }
 
 .post-title-th {
@@ -286,7 +285,7 @@ input:focus:-ms-input-placeholder {
 }
 
 .post-bar {
-    display: flex;
+    display: none;
     margin-right: 20px;
 }
 
@@ -321,7 +320,7 @@ input:focus:-ms-input-placeholder {
     width: 85%;
 }
 
-.post h2{
+.post-author {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     color: black;
@@ -333,14 +332,192 @@ input:focus:-ms-input-placeholder {
 }
 
 .post h4 {
-    padding: 10px 20px 10px 20px;
+    padding: 10px 15px 10px 15px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     color: black;
 }
 
+@-webkit-keyframes ticker {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
+  
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+  
+  @keyframes ticker {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+}
+
+.post-counter-ticker {
+    align-items: center;
+    min-width: fit-content;
+    gap: 10px;
+    margin-left: 10px;
+}
+
+.post-counter-ticker-wrapper {
+    border-top: 4px solid #F28500;
+}
+
+.post-counter-ticker h2 {
+    min-width: fit-content;
+}
+
+.post:hover .post-counter-ticker {
+
+    -moz-animation-timing-function: linear;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-name: ticker;
+    -webkit-animation-name: ticker;
+    animation-name: ticker;
+    animation-duration: 120s;
+}
+
+/*
+
+@-moz-keyframes shake {
+	0% { -moz-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -moz-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -moz-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -moz-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -moz-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -moz-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -moz-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -moz-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -moz-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -moz-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -moz-transform: translate(1px, -2px) rotate(-1deg); }
+}
+@-webkit-keyframes shake {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
+@keyframes shake {
+	0% { transform: translate(2px, 1px) rotate(0deg); }
+	10% { transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { transform: translate(-3px, 0px) rotate(1deg); }
+	30% { transform: translate(0px, 2px) rotate(0deg); }
+	40% { transform: translate(1px, -1px) rotate(1deg); }
+	50% { transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { transform: translate(-3px, 1px) rotate(0deg); }
+	70% { transform: translate(2px, 1px) rotate(-1deg); }
+	80% { transform: translate(-1px, -1px) rotate(1deg); }
+	90% { transform: translate(2px, 2px) rotate(0deg); }
+	100% {transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+@keyframes wobble {
+    0%, 100% {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    }
+
+    15% {
+        -webkit-transform: translateX(-3px) rotate(-5deg);
+        transform: translateX(-3px) rotate(-5deg);
+    }
+
+    30% {
+        -webkit-transform: translateX(calc(3px / 2)) rotate(5deg);
+        transform: translateX(calc(3px / 2)) rotate(5deg);
+    }
+
+    45% {
+        -webkit-transform: translateX(calc(-3px / 2)) rotate(calc(-5deg / 1.8));
+        transform: translateX(calc(-3px / 2)) rotate(calc(-5deg / 1.8));
+    }
+
+    60% {
+        -webkit-transform: translateX(calc(3px / 3.3)) rotate(calc(5deg / 3));
+        transform: translateX(calc(3px / 3.3)) rotate(calc(5deg / 3));
+    }
+
+    75% {
+        -webkit-transform: translateX(calc(-3px / 5.5)) rotate(calc(-5deg / 5));
+        transform: translateX(calc(-3px / 5.5)) rotate(calc(-5deg / 5));
+    }
+}
+
+To activate - animation: wobble 1s ease infinite;
+
+*/
+
+.post-counter {
+    font-family: 'Poppins', sans-serif;
+    color: #000;
+    font-size: 16px;
+    white-space: nowrap;
+}
+
+.post-counter span {
+    color: #F28500 ;
+}
+
 .post-div {
-    border: 2px solid #F28500;
+    border: 2.5px solid #F28500;
+}
+
+.command-border {
+    border-color: #000 !important;
+}
+
+.author {
+    font-weight: 700;
+}
+
+.message-bar {
+    display: inline-flex;
+    padding-left: 15px;
+    border-top: 5px solid #f28500;
+}
+
+.last-message {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.6vw;
+    color: #f28500;
+}
+
+.last-message span {
+    color: #000;
+}
+
+.message-bar img {
+    display: none;
+    width: 20px;
+    margin-right: 10px;
+    filter: brightness(0);
 }
 
 /*
@@ -780,6 +957,10 @@ input:focus:-ms-input-placeholder {
     .watchlist li {
         font-size: 16px;
     }
+
+    .last-message {
+        font-size: 2.5vw;
+    }
 }
 
 @media only screen and (max-width: 770px) {
@@ -803,41 +984,6 @@ input:focus:-ms-input-placeholder {
 
     .navbar form input {
         font-size: 6.5vw;
-    }
-
-    .post h1{
-        font-family: 'Poppins', sans-serif;
-        font-size: 3vw;
-        color: black;
-        padding: 15px 20px 0px 20px;
-    }
-
-    .post-bar h3 {
-        margin-left: auto;
-        font-size: 20px;
-        font-family: 'Poppins', sans-serif;
-        color: black;
-    }
-
-    .post svg {
-        margin-left: 0px;
-        margin-left: 5px;
-        width: 17px;
-    }
-
-    .post-author {
-        width: 85%;
-    }
-
-    .post h2{
-        font-family: 'Poppins', sans-serif;
-        font-size: 2vw;
-        color: black;
-        margin: 0px 20px 5px 20px;
-    }
-
-    .post h4 {
-        font-size: 2.2vw;
     }
 }
 
@@ -1010,6 +1156,14 @@ input:focus:-ms-input-placeholder {
     }
 
     .post-label {
+        display: none;
+    }
+    
+    .message-bar {
+        display: none;
+    }
+
+    .post-counter-ticker-wrapper {
         display: none;
     }
 
