Mission Primer Pt2 (Notifs)

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -45,7 +45,7 @@
         <div class="dashboard-bottom">
             <div class="dashboard-left" id="dashboard-left">
                 <div class="dashboard-identity mobile-hidden" id="dashboard-identity">
-                    <a href="../edit-profile/">
+                    <a href="../edit-profile">
                         <h1 class="dashboard-name"><span>{</span>Edit Your Profile<span>}</span></h1>
                     </a>
                     <div class="dashboard-colors">
