--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -252,16 +252,23 @@ input:focus:-ms-input-placeholder {
 }
 
 .post {
+    position: relative;
     margin: 0px 15px 0px 15px;
     text-decoration: none;
     cursor: pointer;
     border: 5px solid #f28500;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    border-radius: 15px;
     overflow: hidden;
+    border-radius: 15px;
+    box-sizing: border-box;
+    transition: transform .2s ease-in-out; 
 }
 
-.trending-post-border {
+.post:hover {
+    transform: scale(1.025);
+}
+
+.treding-post-border {
     border-color: #00baf2 !important;
 }
 
@@ -309,11 +316,6 @@ input:focus:-ms-input-placeholder {
     width: 17px;
     height: 17px;
     height: 100%;
-}
-
-.post-icon {
-    background-color: #F28500;
-    border-radius: 5px;
 }
 
 .post-author {
@@ -392,88 +394,6 @@ input:focus:-ms-input-placeholder {
     animation-duration: 120s;
 }
 
-/*
-
-@-moz-keyframes shake {
-	0% { -moz-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -moz-transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -moz-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -moz-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -moz-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -moz-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -moz-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -moz-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -moz-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -moz-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -moz-transform: translate(1px, -2px) rotate(-1deg); }
-}
-@-webkit-keyframes shake {
-	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-
-@keyframes shake {
-	0% { transform: translate(2px, 1px) rotate(0deg); }
-	10% { transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { transform: translate(-3px, 0px) rotate(1deg); }
-	30% { transform: translate(0px, 2px) rotate(0deg); }
-	40% { transform: translate(1px, -1px) rotate(1deg); }
-	50% { transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { transform: translate(-3px, 1px) rotate(0deg); }
-	70% { transform: translate(2px, 1px) rotate(-1deg); }
-	80% { transform: translate(-1px, -1px) rotate(1deg); }
-	90% { transform: translate(2px, 2px) rotate(0deg); }
-	100% {transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-@keyframes wobble {
-    0%, 100% {
-        -webkit-transform: translateX(0%);
-        transform: translateX(0%);
-        -webkit-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-    }
-
-    15% {
-        -webkit-transform: translateX(-3px) rotate(-5deg);
-        transform: translateX(-3px) rotate(-5deg);
-    }
-
-    30% {
-        -webkit-transform: translateX(calc(3px / 2)) rotate(5deg);
-        transform: translateX(calc(3px / 2)) rotate(5deg);
-    }
-
-    45% {
-        -webkit-transform: translateX(calc(-3px / 2)) rotate(calc(-5deg / 1.8));
-        transform: translateX(calc(-3px / 2)) rotate(calc(-5deg / 1.8));
-    }
-
-    60% {
-        -webkit-transform: translateX(calc(3px / 3.3)) rotate(calc(5deg / 3));
-        transform: translateX(calc(3px / 3.3)) rotate(calc(5deg / 3));
-    }
-
-    75% {
-        -webkit-transform: translateX(calc(-3px / 5.5)) rotate(calc(-5deg / 5));
-        transform: translateX(calc(-3px / 5.5)) rotate(calc(-5deg / 5));
-    }
-}
-
-To activate - animation: wobble 1s ease infinite;
-
-*/
-
 .post-counter {
     font-family: 'Poppins', sans-serif;
     color: #000;
@@ -513,12 +433,16 @@ To activate - animation: wobble 1s ease infinite;
     color: #000;
 }
 
-.message-bar img {
-    display: none;
+.post-icon {
     width: 20px;
     margin-right: 10px;
     filter: brightness(0);
 }
+
+.post-icon-active {
+    filter: none;
+}
+
 
 /*
 .categories li:nth-child(1){
@@ -1112,6 +1036,10 @@ To activate - animation: wobble 1s ease infinite;
 
     .post:nth-child(2) {
         border-top: none;
+    }
+
+    .post:hover {
+        transform: none; 
     }
 
     .post h1{
