--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                 <a id="controversial" href="/?sort=controversial"><span>Controversial</span></a>                
                 <a href="/post/write" class="post-link"><span>#Post</span></a>
                 {% if user.is_authenticated %}
-                <a href="/{{ user.display_name }}/dashboard/" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
+                <a href="/{{ user.display_name }}/dashboard" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
                 {% else %}
                 <div class="account-links">
                     <a href="login/"><span>Log in</span></a>
@@ -80,9 +80,13 @@
                     <hr class="post-div">
                     <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
                     {% if post.last_message %}
-                    <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt=""><h1 class="last-message"><span>Last Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% if post.pk in user_notified_set %}
+                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="last-message"><span>New Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% else %}
+                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="last-message"><span>Last Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% endif %}
                     {% else %}
-                    <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt=""><h1 class="last-message"><span>This chat is totally empty!</span></h1></div>
+                    <div class="message-bar"><h1 class="last-message"><span>This chat is totally empty!</span></h1></div>
                     {% endif %}
                     {% elif post.post_type == "TH" %}
                     <h1 class="post-title"><span class="post-title-th">Theory:</span> {{post.post_title | truncatesmart:60}}</h1>
@@ -98,9 +102,13 @@
                     <hr class="post-div">
                     <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
                     {% if post.last_message %}
-                    <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt=""><h1 class="last-message"><span>Last Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% if post.pk in user_notified_set %}
+                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="last-message"><span>New Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% else %}
+                        <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="last-message"><span>Last Message:</span> {<span>{{ post.last_message|truncatesmart:35 }}</span>}</h1></div>
+                        {% endif %}
                     {% else %}
-                    <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt=""><h1 class="last-message">This chat is totally empty!</h1></div>
+                    <div class="message-bar"><h1 class="last-message"><span>This chat is totally empty!</span></h1></div>
                     {% endif %}
                     {% endif %}
                 </a>
